# Sift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  servers.config
SiftEC/: CMakeLists.txt
SiftEC/common/: common.h  logging.h  test.h
SiftEC/include/client/: remote_client.h
SiftEC/include/kv_store/: batched_log_entry.h  kv_coordinator.h  kv_index_table.h  kv_server.h  remote_server.h
SiftEC/include/memory_replication/: coordinator_admin.h  coordinator_service.h  coordinator_state.h  erasure_coding.h  local_replication_server.h  local_request_processor.h  memory_servers.h  request_processor.h  success_count.h  term_id.h
SiftEC/include/network/: work_request.h
SiftEC/include/network/rdma/: local_rdma_client.h  rdma.h  rdma_client.h  rdma_server.h  remote_rdma_client.h
SiftEC/include/util/: serializable_address_value_pair.h
SiftEC/src/kv_store/: data_entry.cpp  kv_coordinator.cpp  kv_index_table.cpp  log_entry.cpp
SiftEC/src/memory_replication/: coordinator_admin.cpp  coordinator_service.cpp  coordinator_state.cpp  erasure_coding.cpp  local_request_processor.cpp  memory_servers.cpp
SiftEC/src/network/: work_request.cpp
SiftEC/src/network/rdma/: local_rdma_client.cpp  rdma_server.cpp  remote_rdma_client.cpp
SiftEC/src/util/: serializable_address_value_pair.cpp
SiftEC/tests/kv/: remote_client.cpp  remote_server.cpp
SiftEC/util/: barrier.h  bitmap.h  bounded_queue.h  lru_cache.h  queue.h  zipf_distribution.h
SiftEC/util/cache/: entry_lock_lru.cpp  multi_lru.h  simple_lru.cpp  simple_lru.h
SiftEC/util/rpc/: buffer.h  connection.cpp  kv_connection.cpp  kv_connection.h
common/: common.h  logging.h
include/client/: remote_client.h
include/kv_store/: data_entry.h  kv_coordinator.h  kv_index_table.h  kv_request.h  kv_server.h  log_entry.h  remote_server.h
include/memory_replication/: coordinator_admin.h  coordinator_config.h  coordinator_service.h  file_writer.h  local_replication_server.h  local_request_processor.h  persistent_store.h  request_processor.h
include/network/: rpc.h  work_request.h
include/network/rdma/: local_rdma_client.h  rdma_client.h  rdma_server.h  remote_rdma_client.h
src/kv_store/: data_entry.cpp  kv_coordinator.cpp  kv_index_table.cpp  log_entry.cpp
src/memory_replication/: coordinator_admin.cpp  coordinator_config.cpp  coordinator_service.cpp  file_writer.cpp  local_request_processor.cpp  persistent_store.cpp  success_count.cpp  term_id.cpp
src/network/: rpc.cpp  work_request.cpp
src/network/rdma/: local_rdma_client.cpp  rdma_server.cpp  remote_rdma_client.cpp
src/util/: serializable_address_value_pair.cpp
tests/kv/: remote_client.cpp  remote_server.cpp
util/: lock_table.h  priority_queue.h  spinlock.h  weighted_bounded_queue.h
util/cache/: entry_lock_lru.h  lru.h  multi_lru.cpp
util/rpc/: buffer.cpp  connection.h
